--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,20 +30,20 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-  # test:
-  #   needs: build
-  #   runs-on: ubuntu-latest
+  test:
+    needs: build
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Set up JDK 17
-  #       uses: actions/setup-java@v4.0.0
-  #       with:
-  #         java-version: '17'
-  #         distribution:  'temurin'
-  #         cache: maven
-  #     - name: Run unit Test with Maven
-  #       run: mvn -B test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.0.0
+        with:
+          java-version: '17'
+          distribution:  'temurin'
+          cache: maven
+      - name: Run unit Test with Maven
+        run: mvn -B test
 
   # synk:
   #   needs: test
