build and test by maven and synk

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,11 +45,11 @@ jobs:
       - name: Run unit Test with Maven
         run: mvn -B test
 
-  # synk:
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@master
-  #       continue-on-error: true
-  #       env:
-  #         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+  synk:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
